# tollgate

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  FEATURES.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/mcp_minimal/: audit.jsonl  demo.py  manifest.yaml  policy.yaml
examples/mock_tickets/: README.md  agent.py  demo.py  manifest.yaml  tickets.json  tools.py
examples/security_hardened/: README.md  audit.jsonl  demo.py  manifest.yaml  manifest.yaml.sig  policy.yaml  test_scenarios.yaml
examples/strands_minimal/: audit.jsonl  demo.py  manifest.yaml
policies/: default.yaml
specs/: audit_event.schema.json  decision.schema.json  identity.schema.json  intent.schema.json  tool_request.schema.json
src/tollgate/: __init__.py  anomaly_detector.py  approval.py  approvals.py  audit.py  circuit_breaker.py  context_monitor.py  exceptions.py  grants.py  helpers.py  manifest_signing.py  network_guard.py  policy.py  policy_testing.py  rate_limiter.py  registry.py  tower.py  types.py  verification.py
src/tollgate/backends/: __init__.py  redis_store.py  sqlite_store.py
src/tollgate/integrations/: mcp.py  strands.py
src/tollgate/interceptors/: __init__.py  base.py  langchain.py  openai.py
tests/: test_adapters_v1.py  test_audit_events.py  test_audit_integrity_v1.py  test_defense_in_depth.py  test_deferred_v1.py  test_grants.py  test_helpers.py  test_helpers_v1.py  test_integrations_v1.py  test_month1_features.py  test_month2_features.py  test_month3_features.py  test_policy_logic.py  test_policy_v1.py  test_registry_v1.py  test_resilience_protection.py  test_security_hardening.py  test_security_v1.py  test_tower_decisions.py  test_tower_v1.py  test_v1_integrations.py
