[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tollgate"
version = "1.4.0"
description = "Runtime enforcement layer for AI agent tool calls using Identity + Intent + Policy"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Tollgate Maintainers" },
]
keywords = ["ai", "agents", "security", "policy", "enforcement", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
dependencies = [
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]

[project.scripts]
tollgate = "tollgate.policy_testing:cli_main"

[project.urls]
Homepage = "https://github.com/ravi-labs/tollgate"
Repository = "https://github.com/ravi-labs/tollgate.git"
Documentation = "https://github.com/ravi-labs/tollgate#readme"
Issues = "https://github.com/ravi-labs/tollgate/issues"
Changelog = "https://github.com/ravi-labs/tollgate/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tollgate"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "RET"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG002"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
